# CTracer

./: CMakeLists.txt  Readme.md  build.bat  imgui.ini
docs/: Getting-Started.md  HTTP-API.md  Home.md  Material-Attributes.md  Render-Window.md  Studio-Integration.md
lua/: GpuRendererClient.lua  GpuRendererServer.lua
src/: ctrace.h  ctracer.h  main.c  postprocess.h  renderer.c  renderer.h  scene.c  scene.h  server.c  server.h  ui.cpp  ui.h
src/cuda/: accumulate.cu  accumulate.cuh  cuda_utils.cuh  intersect.cu  intersect.cuh  postprocess.cu  postprocess.cuh  ray_gen.cu  ray_gen.cuh  scene_upload.cu  scene_upload.cuh  shade.cu  shade.cuh
